add base project structure

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,11 +43,11 @@
               ["^\\u0000"],
               ["^\\.\\.(?!/?$)", "^\\.\\./?$"],
               ["^\\./(?=.*/)(?!/?$)", "^\\.(?!/?$)", "^\\./?$"],
-              ["^.+\\.?(css|scss)$"],
-            ],
-          },
-        ],
-      },
-    },
+              ["^.+\\.?(css|scss)$"]
+            ]
+          }
+        ]
+      }
+    }
   ]
 }
