--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mantine/core": "^7.11.2",
     "@mantine/hooks": "^7.11.2",
     "@tanstack/react-query": "^5.51.15",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
