--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mantine/core": "^7.11.2",
     "@mantine/hooks": "^7.11.2",
+    "@tabler/icons-react": "^3.11.0",
     "@tanstack/react-query": "^5.51.15",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "next": "14.2.5",
